# topwrap-cores

./: .gitmodules
.github/workflows/: main.yml
cores/topwrap_axi_core_plugin/: pyproject.toml
cores/topwrap_axi_core_plugin/topwrap_axi_core_plugin/: __init__.py
